k8s/bonus-app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-v2-service
  labels:
    app: app-python-v2
spec:
  type: ClusterIP
  selector:
    app: app-python-v2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
