k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-service
  labels:
    app: app-python
spec:
  type: NodePort
  selector:
    app: app-python
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
